--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
     <title>WEB1-HTML</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        h1 { 
+            font-size: 45px; text-align: center;
+        }
+ </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZM508JX6Y"></script>
@@ -16,7 +25,7 @@
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
+        <li><a href="1.html" style="color: red; text-decoration:underline;">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">javascript</a></li>
     </ol>
