--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
 <head>
     <title>WEB1-CSS</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        h1 { 
+            font-size: 45px; text-align: center;
+        }
+ </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZM508JX6Y"></script>
@@ -17,9 +26,17 @@
     <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
+        <li><a href="2.html" style="color: red; text-decoration:underline;">CSS</a></li>
         <li><a href="3.html">javascript</a></li>
     </ol>
+    <!--
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+        <li><a href="1.html"><font color="red">HTML</font></a></li>
+        <li><a href="2.html"><font color="red">CSS</font></a></li>
+        <li><a href="3.html"><font color="red">javascript</font></a></li>
+    </ol>
+-->
 <h2>CSS</h2>
 <p>
 Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
