--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <head>
     <title>WEB1-javascript</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        h1 { 
+            font-size: 45px; text-align: center;
+        }
+ </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZM508JX6Y"></script>
@@ -18,7 +27,7 @@
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">javascript</a></li>
+        <li><a href="3.html" style="color: red; text-decoration:underline;">javascript</a></li>
     </ol>
 <h2>javascript</h2>
 <p>
