--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>WEB1-welcom</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        h1 { 
+            font-size: 45px; text-align: center;
+        }
+ </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZM508JX6Y"></script>
